Fix macOS tests (again)